@@ -26,6 +26,9 @@ Broker:
   duplicate retained messages being sent on subscription. Closes bug #1116233.
 - Don't discard listener values when no "port" option given. Closes bug
   #1131406.
+- Client password check was always failing when security was being reapplied
+  after a config reload. This meant that all clients were being disconnected.
+  This has been fixed.
 
 Client library:
 - Allow control of reconnection timeouts in mosquitto_loop_forever() and after
